# mafia-slots

./: .gitignore  CMakeLists.txt  mafia-slots  mafia-slots.html  mafia-slots.js  mafia-slots.js.orig.js  mafia-slots.wasm  main.c
src/: game.c
src/include/: game.h  screens.h
src/screens/: screenBonus.c  screenGame.c
